change picture and fix flexbox spacing

--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
 .header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    gap: 360px;
     font-family: Robato;
     font-size: 24px;
     background-color: #1F2937;
@@ -18,6 +19,7 @@ body {
 .info p {
     color: #E5E7EB;
     font-size: 18px;
+    margin: 0px;
 }
 
 .link {
@@ -35,10 +37,13 @@ body {
 .top {
     background-color: #1F2937;
     margin: auto;
+    padding: 50px;
 }
 
 .hero {
     display: flex;
+    justify-content: flex-start;
+    margin: 64px;
 }
 
 .info {
@@ -51,12 +56,20 @@ body {
     color: #f9faf8;
     font-weight: extra-bold;
     font-size: 48px;
+    margin: 0px;
 }
 
 .info button {
-    width: 75px;
-    border-radius: 8px;
+    width: 85px;
+    height: 25px;
+    border-radius: 7px;
     background-color: #3882F8;
     border-color: #3882F8;
     color: #f9faf8;
+    margin-top: 8px;
+}
+
+img {
+    width: 400px;
+    height: auto;
 }
